# InteractiveAndRobustMeshBooleans

./: .gitignore  CMakeLists.txt  README.md  main.cpp
arrangements/code/: custom_stack.h  debug.h  fast_trimesh.cpp  intersection_classification.cpp  intersection_classification.h  processing.cpp  solve_intersections.cpp  triangulation.cpp  triangulation.h
code/: boolean_api.cpp  boolean_api.h  booleans.cpp  booleans.h
